--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
             <artifactId>spring-framework-bom</artifactId>
             <version>4.0.1.RELEASE</version>
             <type>pom</type>
-            <scope>import</scope>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -147,6 +147,11 @@
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>6.0.6</version>
         </dependency>
     </dependencies>
 
